# rust-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
cmd/: main.go
configs/: nginx.conf  proxy.docker.json  proxy.json
public/: index.html
src/: http.rs  main.rs  proxy.rs  static_file_server.rs
