[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
bytes = "1.1.0"
log = "0.4.17"
rocket = "0.4.11"
rocket_contrib={version = "0.4.11", features = ["serve"]}
env_logger = "0.9.0"
serde_json = "1.0.82"
serde = {version = "1.0.138", features= ["derive"]}
tokio = {version = "1.19.2", features = ["full"]}

[dev-dependencies]